unpackaged/main/default/objects/Opportunity/fields/Holdback_Percentage_Conga__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Percentage_Conga__c</fullName>
    <formula>TEXT(Daily_Holdback_Amount__c) + "%"</formula>
    <label>Holdback Percentage Conga</label>
    <type>Text</type>
</CustomField>