unpackaged/main/default/objects/Opportunity/fields/IdeaFinancialApplicationID__c.field-meta.xml
<CustomField>
    <fullName>IdeaFinancialApplicationID__c</fullName>
    <label>IdeaFinancialApplicationID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>