unpackaged/main/default/objects/Opportunity/fields/IdeaFinancialFileUploaded__c.field-meta.xml
<CustomField>
    <fullName>IdeaFinancialFileUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IdeaFinancialFileUploaded</label>
    <type>Checkbox</type>
</CustomField>