unpackaged/main/default/objects/Opportunity/fields/IdeaFinancialFileUploadMessage__c.field-meta.xml
<CustomField>
    <fullName>IdeaFinancialFileUploadMessage__c</fullName>
    <label>IdeaFinancialFileUploadMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>