unpackaged/main/default/objects/Opportunity/fields/Is_Funded__c.field-meta.xml
<CustomField>
    <fullName>Is_Funded__c</fullName>
    <formula>ISPICKVAL( StageName , 'Funded')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Funded</label>
    <type>Checkbox</type>
</CustomField>