unpackaged/main/default/objects/Opportunity/fields/Is_Funded_By_1st_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Is_Funded_By_1st_Sales_Rep__c</fullName>
    <description>Is Funded By 1st Sales Rep</description>
    <formula>IF(X1st_Sales_Rep__r.Id  ==  Owner.Id &amp;&amp; ISPICKVAL(StageName , "Funded"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Ration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>