unpackaged/main/default/objects/Opportunity/fields/Is_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Rep__c</fullName>
    <formula>Owner.Is_Sales_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sales Rep</label>
    <type>Checkbox</type>
</CustomField>