unpackaged/main/default/objects/Opportunity/fields/IsDlttOrAg_Admin__c.field-meta.xml
<CustomField>
    <fullName>IsDlttOrAg_Admin__c</fullName>
    <formula>Campaign.Id == '7011M000001BdQw' || Campaign.Id == '7011M000001BbIC' ||
 Secondary_Campaign_Source__r.Id == '7011M000001BdQw' || Secondary_Campaign_Source__r.Id == '7011M000001BbIC'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDlttOrAg(Admin)</label>
    <type>Checkbox</type>
</CustomField>