unpackaged/main/default/objects/Opportunity/fields/IsLoggedUser__c.field-meta.xml
<CustomField>
    <fullName>IsLoggedUser__c</fullName>
    <formula>OwnerId ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLoggedUser</label>
    <type>Checkbox</type>
</CustomField>