unpackaged/main/default/objects/Opportunity/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>ISO__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>