unpackaged/main/default/objects/Opportunity/fields/ISO_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>ISO_Contact_Email__c</fullName>
    <label>Partner Contact Email</label>
    <type>Email</type>
</CustomField>