unpackaged/main/default/objects/Opportunity/fields/ISO_Name__c.field-meta.xml
<CustomField>
    <fullName>ISO_Name__c</fullName>
    <label>ISO Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>