unpackaged/main/default/objects/Opportunity/fields/ISO_Name_Conga__c.field-meta.xml
<CustomField>
    <fullName>ISO_Name_Conga__c</fullName>
    <formula>ISO__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISO Name (Conga)</label>
    <type>Text</type>
</CustomField>