unpackaged/main/default/objects/Opportunity/fields/ISO_Phone_Conga__c.field-meta.xml
<CustomField>
    <fullName>ISO_Phone_Conga__c</fullName>
    <formula>ISO__r.Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISO Phone (Conga)</label>
    <type>Text</type>
</CustomField>