unpackaged/main/default/objects/Opportunity/fields/Landlord_Interview__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landlord Interview</label>
    <type>Checkbox</type>
</CustomField>