unpackaged/main/default/objects/Opportunity/fields/Last_3_Years_Personal_Tax_Returns__c.field-meta.xml
<CustomField>
    <fullName>Last_3_Years_Personal_Tax_Returns__c</fullName>
    <description>Last 3 Years Personal Tax Returns</description>
    <inlineHelpText>Last 3 Years Personal Tax Returns</inlineHelpText>
    <label>Last 3 Years Personal Tax Returns</label>
    <type>TextArea</type>
</CustomField>