unpackaged/main/default/objects/Opportunity/fields/Last_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Funded_Date__c</fullName>
    <description>This is the last date the merchant was funded by EMC</description>
    <label>Last Funded Date</label>
    <type>Date</type>
</CustomField>