unpackaged/main/default/objects/Opportunity/fields/Last_Funded_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Funded_Date_Formula__c</fullName>
    <formula>IF( ISPICKVAL(StageName, "Renewal Eligible"),  Account.Last_Funded_Date__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Funded Date</label>
    <type>Date</type>
</CustomField>