unpackaged/main/default/objects/Opportunity/fields/Lead_Creator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Creator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Lead Creator)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>