unpackaged/main/default/objects/Opportunity/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease</label>
    <type>Checkbox</type>
</CustomField>