unpackaged/main/default/objects/Opportunity/fields/Legal_Fees_COJ__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees_COJ__c</fullName>
    <label>Legal Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>