unpackaged/main/default/objects/Opportunity/fields/Link_To_Opp__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Opp__c</fullName>
    <formula>"https://emcfinancial.my.salesforce.com/" + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Opp</label>
    <type>Text</type>
</CustomField>