unpackaged/main/default/objects/Opportunity/fields/Loan_Payments__c.field-meta.xml
<CustomField>
    <fullName>Loan_Payments__c</fullName>
    <label>Loan Payments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>