unpackaged/main/default/objects/Opportunity/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <formula>IF(ISPICKVAL( Payment_Frequency__c, "Weekly"), Number_of_Payments__c  / 4.34812, Number_of_Payments__c  / 21)</formula>
    <label>Loan Term Months</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>