unpackaged/main/default/objects/Opportunity/fields/Lock_Box_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Lock_Box_Deposits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Box Deposits</label>
    <type>Checkbox</type>
</CustomField>