unpackaged/main/default/objects/Opportunity/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <formula>Account.Marketing_Consent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Consent</label>
    <type>Checkbox</type>
</CustomField>