unpackaged/main/default/objects/Opportunity/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <label>Maturity Date</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>