unpackaged/main/default/objects/Opportunity/fields/Max_Approval__c.field-meta.xml
<CustomField>
    <fullName>Max_Approval__c</fullName>
    <label>Max Approval</label>
    <summarizedField>Offer__c.Amount_Advanced__c</summarizedField>
    <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>