unpackaged/main/default/objects/Opportunity/fields/Max_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Funding_Amount__c</fullName>
    <description>highest approval from all banks</description>
    <label>Max Funding Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1k to 5k</fullName>
            </value>
            <value>
                <fullName>5k to 20k</fullName>
            </value>
            <value>
                <fullName>20k to 50k</fullName>
            </value>
            <value>
                <fullName>50k +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>