unpackaged/main/default/objects/Opportunity/fields/Max_Funding_Payment_Date_Acct_1__c.field-meta.xml
<CustomField>
    <fullName>Max_Funding_Payment_Date_Acct_1__c</fullName>
    <description>Max month/year combination for funding payments where Position is true and the month/year is less than or equal to the current month/year for Account 1</description>
    <label>Max Funding Payment Date Act. 1</label>
    <summarizedField>Funding_Payment__c.Month_Year_Helper_Acct_1__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Payment__c.Position__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>