unpackaged/main/default/objects/Opportunity/fields/Max_Potencial_Commission__c.field-meta.xml
<CustomField>
    <fullName>Max_Potencial_Commission__c</fullName>
    <description>This field was made for the purpose of the following report: Potential vs. Actual Commission</description>
    <label>Max Potential Commission</label>
    <summarizedField>Offer__c.Total_Commision__c</summarizedField>
    <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>