unpackaged/main/default/objects/Opportunity/fields/Merchant_Interview__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Interview</label>
    <type>Checkbox</type>
</CustomField>