unpackaged/main/default/objects/Opportunity/fields/Merchant_Net_1__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Net_1__c</fullName>
    <formula>Dollar_Amount_1__c  - (Total_Funder_Fees_1__c  +   Additional_Fees_1__c   +  Professional_Service_Fees_1__c  +  Prior_Advance_Payoff_1__c  + Vendor_Payoff_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>