unpackaged/main/default/objects/Opportunity/fields/Merchant_Net__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Net__c</fullName>
    <formula>Dollar_Amount_2__c - (Total_Funder_Fees_2__c  +  Additional_Fees__c  +  Professional_Service_Fees_2__c  + Prior_Advance_Payoff__c +Vendor_Payoff__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>