unpackaged/main/default/objects/Opportunity/fields/Merchant_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number_1__c</fullName>
    <label>Merchant Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>