unpackaged/main/default/objects/Opportunity/fields/Merchant_Objections__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Objections__c</fullName>
    <description>This is where the agent fills out the concerns the merchant has regarding the offers we pitched/sent out</description>
    <inlineHelpText>This is where the agent fills out the concerns the merchant has regarding the offers we pitched/sent out</inlineHelpText>
    <label>Merchant Objections</label>
    <type>TextArea</type>
</CustomField>