unpackaged/main/default/objects/Opportunity/fields/Missing_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>Missing_Bank_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Bank Statements</label>
    <type>Checkbox</type>
</CustomField>