unpackaged/main/default/objects/Opportunity/fields/Missing_Merchant_Statements__c.field-meta.xml
<CustomField>
    <fullName>Missing_Merchant_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Merchant Statements</label>
    <type>Checkbox</type>
</CustomField>