unpackaged/main/default/objects/Opportunity/fields/Net_Funded__c.field-meta.xml
<CustomField>
    <fullName>Net_Funded__c</fullName>
    <description>This formula field takes the Loan Amount and deducts the PSF Fee, both Origination Fees and the ACH Program Fee</description>
    <formula>Loan_Amount__c  -  PSF_Fee__c  -  Origination_Fee_Lender__c -  Origination_Fee_Calc__c  - ACH_Program_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>