unpackaged/main/default/objects/Opportunity/fields/New_Deals__c.field-meta.xml
<CustomField>
    <fullName>New_Deals__c</fullName>
    <formula>IF(ISPICKVAL(Type, "New Deal"),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>