unpackaged/main/default/objects/Opportunity/fields/No_of_Funders__c.field-meta.xml
<CustomField>
    <fullName>No_of_Funders__c</fullName>
    <label># of Funders</label>
    <summaryFilterItems>
        <field>Loan_Balance__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Balance__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>