unpackaged/main/default/objects/Opportunity/fields/Notes_Missing_Items_2__c.field-meta.xml
<CustomField>
    <fullName>Notes_Missing_Items_2__c</fullName>
    <label>Notes/Missing Items</label>
    <length>32444</length>
    <type>LongTextArea</type>
</CustomField>