unpackaged/main/default/objects/Opportunity/fields/Notes_Missing_Items_CCP__c.field-meta.xml
<CustomField>
    <fullName>Notes_Missing_Items_CCP__c</fullName>
    <label>Notes/Missing Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>