unpackaged/main/default/objects/Opportunity/fields/Now_Minus_50_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Now_Minus_50_Minutes__c</fullName>
    <formula>NOW() - ( 50/1440 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now Minus 50 Minutes</label>
    <type>DateTime</type>
</CustomField>