unpackaged/main/default/objects/Opportunity/fields/Number_of_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Account_1__c</fullName>
    <label>Act. 1 No. of Months</label>
    <summaryFilterItems>
        <field>Bank_Stataments__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Stataments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>