unpackaged/main/default/objects/Opportunity/fields/Number_Of_Positions_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Positions_Account_1__c</fullName>
    <description>This field calculates the number of records where position is equal to true (default).</description>
    <label>Number of Positions (Account 1)</label>
    <summaryFilterItems>
        <field>Funding_Payment__c.Position__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Month_Year_Helper_is_Max_Acct_1__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Frequency__c</field>
        <operation>notEqual</operation>
        <value>Monthly</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>