unpackaged/main/default/objects/Opportunity/fields/Number_of_Positions_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Positions_Account_2__c</fullName>
    <label>Number of Positions (Account 2)</label>
    <summaryFilterItems>
        <field>Funding_Payment__c.Position__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Account__c</field>
        <operation>equals</operation>
        <value>Account 2</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Payment__c.Month_Year_Helper_is_Max_Acct_2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>