unpackaged/main/default/objects/Opportunity/fields/Ocrolus_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Ocrolus_Book_Name__c</fullName>
    <label>Ocrolus Book Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>