unpackaged/main/default/objects/Opportunity/fields/Ocrolus_Book_PK__c.field-meta.xml
<CustomField>
    <fullName>Ocrolus_Book_PK__c</fullName>
    <label>Ocrolus Book PK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>