unpackaged/main/default/objects/Opportunity/fields/Ocrolus_Book_UUID__c.field-meta.xml
<CustomField>
    <fullName>Ocrolus_Book_UUID__c</fullName>
    <label>Ocrolus Book UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>