unpackaged/main/default/objects/Opportunity/fields/Offer_Expires__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expires__c</fullName>
    <formula>TODAY() + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expires</label>
    <type>Date</type>
</CustomField>