unpackaged/main/default/objects/Opportunity/fields/Offer_Expires_Text__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expires_Text__c</fullName>
    <formula>"This offer of funding will expire on " + TEXT(MONTH(Offer_Expires__c))+"/" +TEXT(DAY(Offer_Expires__c))+"/" +TEXT(YEAR(Offer_Expires__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expires Text</label>
    <type>Text</type>
</CustomField>