unpackaged/main/default/objects/Opportunity/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <description>This fields counts how many Offers records are created, so that a validation rule on the opportunity will only allow the stage to be up changed to approved when at least one approval is created</description>
    <label>Offers</label>
    <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>