unpackaged/main/default/objects/Opportunity/fields/Open_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Open_Name_Text__c</fullName>
    <formula>Opener_Name__r.FirstName + " " + Opener_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Name</label>
    <type>Text</type>
</CustomField>