unpackaged/main/default/objects/Opportunity/fields/Opener_Name__c.field-meta.xml
<CustomField>
    <fullName>Opener_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opener Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opener Name)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>