unpackaged/main/default/objects/Opportunity/fields/Opportunity_Created_Directly__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Directly__c</fullName>
    <formula>Converted_Lead__c != 'yes'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Created Directly</label>
    <type>Checkbox</type>
</CustomField>