unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Count__c</fullName>
    <formula>IF(Owner.LastName = "Green", +1, +0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>