unpackaged/main/default/objects/Opportunity/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <label>Origination Fee % [Lender]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>