unpackaged/main/default/objects/Opportunity/fields/Origination_Fee_Calc__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Calc__c</fullName>
    <formula>Loan_Amount__c * Origination_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Fee Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>