unpackaged/main/default/objects/Opportunity/fields/Origination_Fee_Lender__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Lender__c</fullName>
    <label>Origination Fee [Lender]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>