unpackaged/main/default/objects/Opportunity/fields/Origination_Fees__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fees__c</fullName>
    <description>This field Combines the 2 Origination Fees (% and $) to one value for the Conga Contract Generation to display one filed on the Cover Sheet combining the 2 values</description>
    <formula>ACH_Program_Fee__c + Origination_Fee_Lender__c +  Origination_Fee_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>