unpackaged/main/default/objects/Opportunity/fields/Other_Missing__c.field-meta.xml
<CustomField>
    <fullName>Other_Missing__c</fullName>
    <description>Other Missing Items</description>
    <label>Other Missing Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>