unpackaged/main/default/objects/Opportunity/fields/Other_Missing_Application_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Missing_Application_Information__c</fullName>
    <label>Other Missing Application Information</label>
    <type>TextArea</type>
</CustomField>