unpackaged/main/default/objects/Opportunity/fields/Overnight_Money_Xpress__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Money_Xpress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight Money Xpress</label>
    <type>Checkbox</type>
</CustomField>