unpackaged/main/default/objects/Opportunity/fields/Payback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payback_Amount__c</fullName>
    <formula>Loan_Amount__c  *  Factor_Rate__c</formula>
    <label>Payback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>