unpackaged/main/default/objects/Opportunity/fields/Payoff_Letter__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payoff Letter</label>
    <type>Checkbox</type>
</CustomField>