unpackaged/main/default/objects/Opportunity/fields/Personal_Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>Personal_Financial_Statement__c</fullName>
    <description>Personal Financial Statement</description>
    <inlineHelpText>Input here if the Personal Financial Statement is complete or incomplete</inlineHelpText>
    <label>Personal Financial Statement</label>
    <type>TextArea</type>
</CustomField>