unpackaged/main/default/objects/Opportunity/fields/Potemt__c.field-meta.xml
<CustomField>
    <fullName>Potemt__c</fullName>
    <description>Catagories of what we can potentially earn on the deal</description>
    <inlineHelpText>Catagories of what we can potentially earn on the deal</inlineHelpText>
    <label>Potential Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choose Amount</fullName>
                <default>true</default>
                <label>Choose Amount</label>
            </value>
            <value>
                <fullName>Less than 5k</fullName>
            </value>
            <value>
                <fullName>5k to 10k</fullName>
            </value>
            <value>
                <fullName>10k to 20k</fullName>
            </value>
            <value>
                <fullName>20k to 30k</fullName>
            </value>
            <value>
                <fullName>30k to 50k</fullName>
            </value>
            <value>
                <fullName>50k to 75k</fullName>
            </value>
            <value>
                <fullName>75k or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>