unpackaged/main/default/objects/Opportunity/fields/Potential_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Potential_Approval_Amount__c</fullName>
    <description>This figure should generally be anywhere between 50% to 60% of gross sales</description>
    <label>Potential Approval Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>