unpackaged/main/default/objects/Opportunity/fields/Previous_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opp_Owner__c</fullName>
    <formula>CASE(Previous_Opp_Owner_ID__c, "005G0000004MSod", "John Bennett", "005G0000004MSpH", "Kiana Casiello","005G0000004AjwR","Melanie Cetino","005G0000004MSon","Ian Greenspan","005G0000003Q6qc", "Zack Vail","005A0000000eeas","Joseph Green", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Opp Owner</label>
    <type>Text</type>
</CustomField>